--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -7,14 +7,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Currency Converter</h1>
-    <input type="number" id="amount" placeholder="Enter amount" />
-    <select id="fromCurrency"></select>
-    <select id="toCurrency"></select>
-    <button onclick="convertCurrency()">Convert</button>
-    <div id="result"></div>
+  <div class="overlay">
+    <div class="container">
+      <h1>💱 Currency Converter</h1>
+      <input type="number" id="amount" placeholder="Enter amount" />
+      <div class="dropdowns">
+        <select id="fromCurrency"></select>
+        <span>➡️</span>
+        <select id="toCurrency"></select>
+      </div>
+      <button onclick="convertCurrency()">Convert</button>
+      <div id="result"></div>
+    </div>
   </div>
+
   <script src="codes.js"></script>
   <script src="app.js"></script>
 </body>
